added more html and css to understand the structure

--- a/code/style.css
+++ b/code/style.css
@@ -4,21 +4,17 @@
 
 body {
   background-color: #bae1ff;
-  margin: 0;
-}
-
-header {
-  padding: 20px;
-  border: 2px solid pink;
-  background-color: aqua;
-  display: flex;
-}
-
-nav {
-  background-color: black;
-  padding: 50px;
   margin: 0px;
-  border: 2px solid blue;
+}
+
+header {}
+
+.navbar {
+  background-color: green;
+  padding: 20px;
+  border: 5px solid blue;
+
+
 }
 
 /* Create a responsive design with the following views: Desktop 4 columns, tablet 2 columns, mobile 1 column (it should look good on devices from 320px width up to 1600px). Mobile < 667px.
