Update - Copy changes

--- a/code/style.css
+++ b/code/style.css
@@ -1,14 +1,14 @@
 :root {
   --primary-color: #ffbe98;
   --secondary-color: #85677B;
-  --complement-color-1: #869D7A;
-  --complement-color-2: #91785D;
+  --details-color-1: #869D7A;
+  --details-color-2: #91785D;
   --contrast-color-light: #e5e5e5;
-  --base-text: #160C28;
-  --text-light: #e5e5e5;
+  --base-text-color: #160C28;
+  --light-text-color: #e5e5e5;
   --font-size: 12px;
   --standard-box-shadow: 2px 2px 10px 1px var(--secondary-color);
-  --standard-text-shadow: 5px 5px var(--base-text);
+  --standard-text-shadow: 5px 5px var(--base-text-color);
 }
 
 * {
@@ -20,16 +20,16 @@ body {
   background: linear-gradient(145deg, var(--primary-color) 15%, var(--secondary-color));
   background-color: var(--primary-color);
   /* Fallback */
-  color: var(--base-text);
+  color: var(--base-text-color);
   background-repeat: no-repeat;
   background-attachment: fixed;
   overflow-x: hidden;
   height: 100%;
   margin: 0;
-  font-family: 'Open Sans', Arial, Arial, Helvetica, sans-serif;
-  font-size: 1rem;
-  font-weight: 400;
   padding: 0;
+  font-family: 'Open Sans', Arial, Arial, Helvetica, sans-serif;
+  font-size: var(--font-size);
+  font-weight: 400;
 }
 
 main {
@@ -63,7 +63,7 @@ video {
 
 button {
   border-radius: 5%;
-  background-color: var(--complement-color-1);
+  background-color: var(--details-color-1);
   padding: 0.5em 1em;
   text-align: center;
   text-transform: uppercase;
@@ -128,7 +128,7 @@ p {
 }
 
 hr {
-  border-bottom: 0.5px solid var(--complement-color-2);
+  border-bottom: 0.5px solid var(--details-color-2);
 }
 
 /* Layout */
@@ -241,7 +241,7 @@ footer li {
 
 .nav-item {
   padding: 0.875rem 1rem;
-  color: var(--text-light);
+  color: var(--light-text-color);
   margin: 0;
   font-size: 0.875rem;
 }
@@ -258,10 +258,6 @@ footer li {
 
 .nav-menu-main {
   flex-grow: 1;
-}
-
-.nav-menu-sub {
-  display: none;
 }
 
 .menu-toggle {
@@ -282,7 +278,7 @@ footer li {
   animation: slidein .3s linear;
 }
 
-.menu-drawer-show {
+.show {
   display: flex;
 }
 
@@ -333,9 +329,9 @@ footer li {
   font-size: 5rem;
   font-weight: 800;
   text-transform: uppercase;
-  text-shadow: 5px 5px var(--base-text);
+  text-shadow: 5px 5px var(--base-text-color);
   color: var(--secondary-color);
-  background-color: .2, var(--complement-color-1);
+  background-color: .2, var(--details-color-1);
   top: 0em;
   z-index: 10;
   position: relative;
@@ -394,20 +390,25 @@ footer li {
   }
 
   /* Header, nav & footer */
-  header>* {
-    flex-grow: 1;
-  }
 
   .navbar {
     height: auto;
   }
 
-  .nav-menu-sub {
-    display: inherit;
+  .nav-brand {
+    order: 1;
   }
 
-  .footer-links {
-    width: 70%;
+  .nav-menu-main {
+    order: 3;
+  }
+
+  .nav-menu-sub {
+    order: 2;
+  }
+
+  .menu-toggle {
+    order: 2;
   }
 
   /* News */
@@ -464,6 +465,17 @@ footer li {
 
   .news-item {
     width: 32%;
+  }
+}
+
+/* for desktops */
+@media (min-width: 1200px) {
+  .nav-menu-main {
+    order: 2;
+  }
+
+  .nav-menu-sub {
+    order: 3;
   }
 }
 
