--- a/code/style.css
+++ b/code/style.css
@@ -31,9 +31,7 @@ p {
 a {
   font-size: var(--anchor-tags);
   color: white;
-
 }
-
 
 nav {
   border-bottom: 1px;
@@ -107,7 +105,7 @@ main {
   padding: 1.5rem;
 }
 
-/* Limiting the welcome-section width isn't larger than 667px and making sure it is aligned in the middle*/
+/* Limiting the welcome-section width and making sure it is aligned in the middle*/
 .welcome {
   max-width: 667px;
   margin-right: auto;
@@ -128,25 +126,25 @@ main {
 .main-article {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 20px;
-  align-items: center;
-  justify-items: center;
-}
-
-#main-article-body {
+  gap: 1.5rem;
+  padding: 1rem 1rem;
   background-color: #ceeaff;
-  overflow: hidden;
+  margin-bottom: 1rem;
+  border-radius: 0.5rem;
+}
+
+.main-article-picture img {
+  width: 100%;
+  height: 400px;
+  object-fit: scale-down;
+  border-radius: 0.5rem;
+}
+
+.main-article-content {
   text-align: center;
-  padding: 0.5rem;
 }
 
-#main-article-body img {
-  width: 70%;
-  height: auto;
-  padding-top: 3rem;
-}
-
-#main-article-body a {
+.article-link {
   display: inline-block;
   padding: 0.4rem 1rem;
   border-radius: 0.2rem;
@@ -154,33 +152,54 @@ main {
   margin-top: 0.3rem;
 }
 
+/*End of main-article section*/
+/*Start other-articles section*/
+
 .other-articles {
   display: grid;
-  grid-template-columns: (5, 1fr);
+  grid-template-columns: 1fr;
   gap: 20px;
-  align-items: center;
-  justify-items: center;
 }
 
 .article-body {
   background-color: #ceeaff;
-  overflow: hidden;
+  padding: 1rem 1rem;
+  margin-bottom: 1rem;
+  border-radius: 0.5rem;
+}
+
+.article-picture {
   text-align: center;
-  padding: 0.5rem;
 }
 
-.article-body img {
-  width: 60%;
-  height: auto;
-  padding-top: 2rem;
+.article-picture img {
+  max-width: 100%;
+  object-fit: cover;
+  border-radius: 0.5rem;
+  max-height: 250px;
 }
 
-.article-body a {
-  display: inline-block;
-  padding: 0.4rem 1rem;
-  border-radius: 0.2rem;
+.article-content {
+  text-align: center;
+}
+
+footer {
   background-color: #6ec0ff;
-  margin-top: 0.3rem;
+}
+
+.footer-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  color: white;
+  align-items: center;
+  justify-content: space-between;
+  height: 75px;
+  margin: 0 20px;
+  text-align: center;
+}
+
+.footer-container li img {
+  width: 25%;
 }
 
 @media (min-width: 667px) and (max-width: 1024px) {
@@ -189,7 +208,11 @@ main {
   }
 
   .logo {
-    font-size: 25px;
+    font-size: 20px;
+  }
+
+  .article-link {
+    font-size: 20px;
   }
 
   nav {
@@ -222,6 +245,51 @@ main {
   .navlist li a:hover {
     color: white;
   }
+
+  .navlist li a {
+    font-size: 18px;
+  }
+
+  .main-article {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    gap: 1.5rem;
+    padding: 1rem 1rem;
+    background-color: #ceeaff;
+    margin-bottom: 1rem;
+    border-radius: 0.5rem;
+  }
+
+  .main-article-picture img {
+    width: 100%;
+    height: 400px;
+    object-fit: scale-down;
+    border-radius: 0.5rem;
+  }
+
+  .other-articles {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+  }
+
+  .article-picture img {
+    max-height: 300px;
+  }
+
+  .footer-container {
+    height: 100px;
+  }
+
+  .name,
+  .follow-text {
+    font-size: 1.2rem;
+  }
+
+  .linkedin-logo {
+    font-size: 18px;
+  }
 }
 
 @media (min-width: 1025px) {
@@ -230,7 +298,28 @@ main {
   }
 
   .logo {
-    font-size: 30px;
+    font-size: 20px;
+  }
+
+  h1 {
+    font-size: 25px;
+  }
+
+  h2 {
+    font-size: 20px;
+  }
+
+  p,
+  li {
+    font-size: 16px;
+  }
+
+  .article-link {
+    font-size: 18px;
+  }
+
+  .navlist li a {
+    font-size: 20px;
   }
 
   nav {
@@ -250,7 +339,6 @@ main {
     margin-right: 50px;
     transition: none;
     background-color: #6ec0ff;
-
   }
 
   .navlist li {
@@ -266,4 +354,37 @@ main {
     color: white;
   }
 
+  .main-article {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    gap: 1.5rem;
+    padding: 1rem 1rem;
+    background-color: #ceeaff;
+    margin-bottom: 1rem;
+    border-radius: 0.5rem;
+  }
+
+  .other-articles {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+  }
+
+  .article-picture img {
+    max-height: 350px;
+  }
+
+  .footer-container {
+    height: 125px;
+  }
+
+  .name,
+  .follow-text {
+    font-size: 1.2rem;
+  }
+
+  .linkedin-logo {
+    font-size: 20px;
+  }
 }
