--- a/code/style.css
+++ b/code/style.css
@@ -1,6 +1,7 @@
 html {
   background-color: linen;
 }
+
 .header {
   display: flex;
   flex-direction: row;
@@ -12,7 +13,7 @@ html {
   display: flex;
   padding: 0%;
   flex-direction: row;
-  justify-content:flex-start;
+  justify-content: flex-start;
 }
 
 .title-logo img {
@@ -44,7 +45,6 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  
 }
 
 li {
@@ -67,7 +67,7 @@ li a:hover {
 .big-news {
   height: 290px;
   padding: 30px;
-  margin: 10px;  
+  margin: 10px;
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-between;
@@ -75,18 +75,18 @@ li a:hover {
 
 .top-news-img img {
   width: 500px;
-  margin: 10px;
+  /* margin: 10px; */
   border: solid black;
 }
 
-.top-news-img {
+/* .top-news-img {
   height: 280px;
   width: 500px;
-}
+} */
 
 .top-news-text {
   width: 500px;
-  display:flex;
+  display: flex;
   flex-direction: column;
   align-content: center;
   flex-wrap: wrap;
@@ -111,12 +111,11 @@ li a:hover {
 }
 
 .news {
-  
   padding: 10px;
   height: 300px;
   width: 200px;
   border-left: solid rgb(192, 188, 188) 1px;
-  border-top: solid rgb(192, 188, 188) 1px;;
+  border-top: solid rgb(192, 188, 188) 1px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -135,7 +134,6 @@ li a:hover {
 
 .news-text {
   color: rgb(100, 131, 100);
-
 }
 
 .footer {
@@ -144,25 +142,54 @@ li a:hover {
   background-color: beige;
 }
 
-@media (max-width: 667px){
-  .other-news {
-    grid-template-columns: repeat(2, 1fr);
+
+
+@media (max-width: 667px) {
+  .news-container {
+    width: 100%;
   }
+
   .big-news {
-    height: 600px;
+    height: auto;
     padding: 10px;
     flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
   }
+
+  .top-news-text {
+    width: 100%;
+  }
+
+  .top-news-img img {
+    width: 100%;
+    height: auto;
+
+  }
+
+  .other-news {
+    grid-template-columns: 1fr;
+  }
+
+  .news {
+    width: 100%;
+  }
+
+    .news img {
+      width: 50vh;
+    }
 }
 
 @media (min-width: 667px) and (max-width: 1024px) {
-.big-news {
-  height: 600px;
-  padding: 10px;
-  flex-direction: column-reverse;
-  justify-content: center;
-  align-items: center;
-}
+  .big-news {
+    height: auto;
+    padding: 10px;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+  }
+
+    .other-news {
+      grid-template-columns: repeat(3, 1fr);
+    }
 }
