Update - Removed column for big news + margin tweaks in footer

--- a/code/style.css
+++ b/code/style.css
@@ -197,7 +197,7 @@ footer li {
 }
 
 .footer-links>div {
-  margin: auto 1.875rem;
+  margin: 1.875rem;
 }
 
 .footer-text {
@@ -414,7 +414,6 @@ footer li {
   /* News */
 
   .big-news .flex-container {
-    flex-direction: column;
     align-items: center;
     justify-items: center;
   }
