--- a/code/style.css
+++ b/code/style.css
@@ -2,25 +2,30 @@ body {
   background-color: peachpuff;
   color: #fff;
   display: flex;
-  justify-content: center;
-  flex-flow: column wrap;
+  flex-direction: column;
+  margin: 20px;
 
 }
 
 h1 {
+  align-items: flex-start;
   color: rgb(47, 47, 204);
   font-size: 90px;
-  margin: 0;
-  padding: 0;
+  margin: 5px;
+  padding: 5px;
 }
 
 p {
   display: flex;
   justify-content: column;
   flex-direction: column;
+  /*
   border: solid rgb(67, 5, 130);
   border-radius: 5px;
   padding: 20px;
+  height: 550px;
+  width: 350px;
+  */
 }
 
 
@@ -31,7 +36,8 @@ a {
 
 .navigation-bar-img {
   display: flex;
-  flex-direction: flex-start;
+  flex-direction: row-reverse;
+  justify-content: flex-start;
   padding: 20px;
 }
 
@@ -48,41 +54,306 @@ a {
 .navigation-bar-title {
   display: flex;
   justify-content: center;
+  margin: 20px;
+
 }
 
+.text-box-flex {
+  display: flex;
+  flex-flow: column wrap-reverse;
+  align-items: flex-start;
+  /* border only used for structure */
+  /* 
+  border: 5px solid black; 
+  margin: 30px;
+  padding: 20px;
+  */
+}
+
+.brainstorm-button {
+  display: flex;
+  align-self: flex-start;
+  flex-direction: row-reverse;
+  border-radius: 5px;
+  border: 2px solid black;
+  background-color: white;
+  padding: 5px;
+}
 
 .instagram-story-img {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  row-gap: 10px;
+  column-gap: 10px;
+  /*  
+  border: 5px solid black;
+  */
+  padding: 20px;
+  margin: 50px;
 }
 
-.button {
+.idea-button {
+  display: flex;
+  align-self: flex-end;
   border-radius: 5px;
-  border: 2px solid blue;
-  background-color: peachpuff;
-  flex-direction: row;
-  justify-content: flex-end;
+  border: 2px solid black;
+  background-color: rgb(255, 255, 255);
+  padding: 5px;
+  height: 90px;
+  width: 90px;
 }
 
-/* This is just an example för setting up media queries
+.instagram-button {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: row-reverse;
+  background-color: peachpuff;
+  border: 1px solid rgb(250, 195, 146);
+  border-radius: 10px;
+  padding: 10px;
+}
+
 /* this is for tablet */
 @media (min-width: 668px) and (max-width: 1024px) {
   body {
-    background: blue;
+    background-color: peachpuff;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+
   }
 
   h1 {
+    align-items: flex-start;
+    color: rgb(47, 47, 204);
+    font-size: 90px;
+    margin: 5px;
+    padding: 5px;
+  }
+
+  p {
+    display: flex;
+    justify-content: column;
+    flex-direction: column;
+    /*
+    border: solid rgb(67, 5, 130);
+    border-radius: 5px;
+    padding: 20px;
+    height: 550px;
+    width: 350px;
+    */
+  }
+
+
+  a {
+    text-decoration: none;
+    color: rgb(67, 67, 238);
+  }
+
+  .navigation-bar-img {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-start;
+    padding: 20px;
+  }
+
+  .navigation-bar {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    gap: 50px;
+    margin-right: 20px;
     color: #fff;
+
+  }
+
+  .navigation-bar-title {
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+
+  }
+
+
+
+
+  .text-box-flex {
+    display: flex;
+    flex-flow: column wrap-reverse;
+    align-items: flex-start;
+    /* border only used for structure */
+    /* 
+    border: 5px solid black; 
+    margin: 30px;
+    padding: 20px;
+    */
+  }
+
+  .brainstorm-button {
+    display: flex;
+    align-self: flex-start;
+    flex-direction: row-reverse;
+    border-radius: 5px;
+    border: 2px solid black;
+    background-color: white;
+    padding: 5px;
+  }
+
+  .instagram-story-img {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    row-gap: 10px;
+    column-gap: 10px;
+    /*  
+    border: 5px solid black;
+    */
+    padding: 20px;
+    margin: 50px;
+  }
+
+  .idea-button {
+    display: flex;
+    align-self: flex-end;
+    border-radius: 5px;
+    border: 2px solid black;
+    background-color: rgb(255, 255, 255);
+    padding: 5px;
+    height: 90px;
+    width: 90px;
+  }
+
+  .instagram-button {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row-reverse;
+    background-color: peachpuff;
+    border: 1px solid rgb(250, 195, 146);
+    border-radius: 10px;
+    padding: 10px;
   }
 }
+
+
+
 
 /* this is for desktop */
 @media (min-width: 1025px) {
   body {
-    flex-direction: row;
-    flex-wrap: wrap;
-    background: pink;
+    background-color: peachpuff;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
 
+  }
+
+  h1 {
+    align-items: flex-start;
+    color: rgb(47, 47, 204);
+    font-size: 90px;
+    margin: 5px;
+    padding: 5px;
+  }
+
+  p {
+    display: flex;
+    justify-content: column;
+    flex-direction: column;
+    /*
+    border: solid rgb(67, 5, 130);
+    border-radius: 5px;
+    padding: 20px;
+    height: 550px;
+    width: 350px;
+    */
+  }
+
+
+  a {
+    text-decoration: none;
+    color: rgb(67, 67, 238);
+  }
+
+  .navigation-bar-img {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-start;
+    padding: 20px;
+  }
+
+  .navigation-bar {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    gap: 50px;
+    margin-right: 20px;
+    color: #fff;
+
+  }
+
+  .navigation-bar-title {
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+
+  }
+
+
+
+
+  .text-box-flex {
+    display: flex;
+    flex-flow: column wrap-reverse;
+    align-items: flex-start;
+    /* border only used for structure */
+    /* 
+    border: 5px solid black; 
+    margin: 30px;
+    padding: 20px;
+    */
+  }
+
+  .brainstorm-button {
+    display: flex;
+    align-self: flex-start;
+    flex-direction: row-reverse;
+    border-radius: 5px;
+    border: 2px solid black;
+    background-color: white;
+    padding: 5px;
+  }
+
+  .instagram-story-img {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    row-gap: 10px;
+    column-gap: 10px;
+    padding: 20px;
+    margin: 50px;
+  }
+
+  .idea-button {
+    display: flex;
+    align-self: flex-end;
+    border-radius: 5px;
+    border: 2px solid black;
+    background-color: rgb(255, 255, 255);
+    padding: 5px;
+    height: 90px;
+    width: 90px;
+  }
+
+  .instagram-button {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row-reverse;
+    background-color: peachpuff;
+    border: 1px solid rgb(250, 195, 146);
+    border-radius: 10px;
+    padding: 10px;
   }
 }
