--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,255 @@
+/* Universal Settings */
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
 html {
-  background: #0025ff;
-  color: #fff;
+  font-family: 'Comfortaa', sans-serif;
+  background-color: #f7efdf;
+  margin: 0;
+}
+
+body {
+  margin: 0;
+
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+img {
+  overflow-clip-margin: content-box;
+  overflow: clip;
+}
+
+
+/* Navbar section Settings */
+
+nav {
+  width: 100%;
+  height: 55px;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  font-size: 20px;
+  background-color: #e5caaa;
+}
+
+
+/* Desktop navbar Settings */
+
+.desktop-and-tablet-menu a:hover {
+  background-color: #84b4e1;
+  color: #f7efdf;
+}
+
+.desktop-and-tablet-menu {
+  display: flex;
+}
+
+.desktop-and-tablet-menu a{
+  float: right;
+  color: #6a1d1d;
+  padding: 13px 14px;
+  font-size: 17px;
+  align-self: center;
+}
+
+/* Mobile navbar Settings */
+.mobile-nav {
+  background-color: #f5c181;
+  padding: 15px;
+  text-align: center;
+}
+
+.nav-icon {
+  display: none;
+  cursor: pointer;
+}
+
+.nav-content {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
+
+.nav-content li {
+  margin: 0 15px;
+}
+
+.nav-content li:hover {
+  background-color: #84b4e1;
+}
+
+h1 {
+  /* display: flex; */
+  font-size: 50px;
+  padding: 30px 30px;
+  text-align: center;
+  background-color: #84b4e1;
+  margin-bottom: 0;
+  text-wrap: nowrap;
+}
+
+
+.animated-subheader {
+  display: flex;
+  animation-duration: 10s;
+  position: relative;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-name: scroll;
+}
+
+@keyframes scroll {
+  from { left: 100%; }
+  to { left: -80%; }
+}
+
+.animated-text {
+  align-self: center;
+  font-size: 20px;
+}
+.animated-img {
+  padding: 1rem;
+}
+
+
+.header-img {
+  display: flex;
+  align-content: space-between;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
+  margin-bottom: 20px;
+  flex-wrap: nowrap;
+}
+.header-img img{
+  border-color: #f5c181;
+  /* border-width: 1rem; */
+  object-fit: cover;
+  width: 100%;
+}
+
+.header-img a {
+  color: black;
+  font-size: 30px;
+  margin-bottom: 10px;
+  margin-top: 20px;
+}
+.big-news p{
+  font-size: 20px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Universal hover effect for news cards headlines*/
+.news-cards a:hover {
+  background-color: #84b4e1;
+  color: #6a1d1d;
+}
+
+/* News cards & Menu resized for Desktop*/
+@media (min-width: 769px) {
+  .news-cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-gap: 2rem;
+    margin-top: 2rem;
+    text-align: center;
+  }
+
+  .news-cards img{
+    object-fit: cover;
+    width: 100%;
+    height: 40rem;
+  }  
+
+  .mobile-nav {
+    display: none;
+  }
+
+}
+
+/* News cards & Menu resized for Tablet*/
+@media (min-width: 501px) and (max-width: 768px) {
+  .news-cards {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(350px, 1fr));
+    grid-gap: 2rem;
+    margin-top: 2rem;
+    text-align: center;
+  }
+
+  .news-cards img{
+    object-fit: cover;
+    width: 100%;
+    height: 25rem;
+  }  
+
+  .mobile-nav {
+    display: none;
+  }
+}
+
+/* News cards & Menu resized for Mobile*/
+@media only screen and (max-width: 500px) {
+  .news-cards {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 2rem;
+    margin-top: 1rem;
+    text-align: center;
+  }
+
+  .news-cards img{
+    object-fit: cover;
+    width: 100%;
+    height: 15rem;
+  }
+  .desktop-nav {
+    display: none;
+  }
+  .nav-content {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 20px;
+    width: 100%;
+    background-color: #f5c181;
+  }
+  .mobile-nav {
+    display: flex;
+    justify-content: stretch;
+  }
+  .nav-content li {
+    margin: 10px 0;
+    text-align: center;
+  }
+
+  .nav-icon {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .nav-icon:hover + .nav-content, .nav-content:hover {
+    display: block;
+  }
+
+}
+
+
+/* footer settings */
+footer {
+  margin-top: 2rem;
+  display: flex;
+  background-color: #84b4e1;
+  font-size: 1rem;
+  padding: 2rem;
 }
