added some styling to the heading

--- a/code/style.css
+++ b/code/style.css
@@ -3,10 +3,17 @@ html {
   color: #fff;
 }
 
+.header {
+  display: flex;
+  justify-content: space-around;
+}
+
 .main-nav {
   display: inline;
+  align-self: center;
 }
 
 a {
   text-decoration: none;
+  display: block;
 }
