--- a/code/style.css
+++ b/code/style.css
@@ -2,6 +2,11 @@ body {
   background-color: aliceblue;
   width: 100%;
   height: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 25%);
+}
+header {
+  grid-column: span 4;
 }
 section{
   display: flex;
@@ -9,11 +14,13 @@ section{
   flex-direction: column;
 }
 .big-news {
+  grid-column: span 4;
   border:2px solid black;
   margin: 10px;
   padding: 10px;
 }
 .smallnews {
+  grid-column: span 4;
   width: 90%;
   height: 90%;
   justify-content: center;
@@ -34,7 +41,7 @@ img {
       flex-wrap: wrap;
   }
   .smallnews {
-      width: 40%;
+    grid-column: span 2;
   }
   img {
       width: 40%;
@@ -53,7 +60,7 @@ img {
       flex-wrap: wrap;
   }
   .smallnews {
-      width: 20%;
+    grid-column: span 1;
   }
   img {
       width: 40%;
